After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709176 - stream control comparison is wrong
stream control comparison is wrong
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-01 11:19 UTC by Jonas Holmberg
Modified: 2014-02-25 22:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Corrected stream control comparison (813 bytes, patch)
2013-10-01 11:19 UTC, Jonas Holmberg
committed Details | Review

Description Jonas Holmberg 2013-10-01 11:19:24 UTC
gst_rtsp_stream_has_control() returns the opposite of what it ought to return if priv->control exists.
Comment 1 Jonas Holmberg 2013-10-01 11:19:57 UTC
Created attachment 256176 [details] [review]
Corrected stream control comparison
Comment 2 Sebastian Dröge (slomo) 2013-10-02 10:01:33 UTC
commit fcf51d34854006aaa9011c752fa1c2cfac8a7cd9
Author: Jonas Holmberg <jonashg@axis.com>
Date:   Tue Oct 1 13:15:19 2013 +0200

    stream: Correct control comparison
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709176