stream: Correct control comparison

https://bugzilla.gnome.org/show_bug.cgi?id=709176